cvAdd commentMore actions This project is a fully responsive, professional personal resume website. Built from the ground up using pure HTML, CSS, and JavaScript, the site serves as a dynamic, interactive portfolio to showcase skills, experience, and projects to potential employers and professional contacts. The primary goal was to create a visually appealing, easy-to-navigate, and mobile-first platform that demonstrates a strong command of core front-end technologies without relying on any external frameworks like Bootstrap or React.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="experience-container">
         <article class="job-card">
           <h3>Storekeeper</h3>
-          <p class="job-info">Glads Construction Site | Jun 2024 – Present</p>
+          <p class="job-info">Glads Apartment Construction Site | Jun 2024 – Present</p>
           <ul>
             <li>Managed and verified all incoming and outgoing stock movements with precision.</li>
             <li>Conducted regular stock audits to identify and minimize discrepancies, ensuring inventory accuracy.</li>
